--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.3.2",
+    "@angular/cli": "1.2.6",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/language-service": "^4.0.0",
     "@angular/common": "^4.3.2",
     "@angular/compiler": "^4.3.2",
     "@angular/core": "^4.3.2",
