--- a/package.json
+++ b/package.json
@@ -4,35 +4,35 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.3.2",
     "@angular/cli": "1.2.6",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/language-service": "^4.0.0",
     "@angular/common": "^4.3.2",
     "@angular/compiler": "^4.3.2",
+    "@angular/compiler-cli": "^4.0.0",
     "@angular/core": "^4.3.2",
     "@angular/forms": "^4.3.2",
     "@angular/http": "^4.3.2",
+    "@angular/language-service": "^4.0.0",
     "@angular/platform-browser": "^4.3.2",
     "@angular/platform-browser-dynamic": "^4.3.2",
     "@angular/router": "^4.3.2",
-    "animate.css": "^3.5.2",
-    "bootstrap": "^3.3.7",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.4.1",
-    "zone.js": "^0.8.14",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "animate.css": "^3.5.2",
+    "bootstrap": "^3.3.7",
     "codelyzer": "~3.0.1",
+    "core-js": "^2.4.1",
+    "express": "^4.15.3",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -42,9 +42,10 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
+    "rxjs": "^5.4.1",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "zone.js": "^0.8.14"
   }
-  
 }
