--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "e2e": "ng e2e",
     "postinstall": "ng build --aot -prod"
   },
+  "engines": {
+  "node": "6.9.5",
+  "npm": "3.10.10"
+},
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.3.2",
