--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
-    "build": "ng build -prod",
-    "lint": "tslint \"src/**/*.ts\"",
+    "start": "ng serve",
+    "build": "ng build",
     "test": "ng test",
-    "postinstall": "ng build -prod",
-    "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
-},
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.3.2",
