--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
-    "build": "ng build -prod",
-    "lint": "tslint \"src/**/*.ts\"",
+    "start": "ng serve",
+    "build": "ng build",
     "test": "ng test",
-    "postinstall": "ng build --aot -prod",
-    "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
-},
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.3.2",
@@ -46,13 +44,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3",
-     "dotenv": "^4.0.0",
-    "express": "^4.14.1",
-    "protractor": "~4.0.13",
-    "ts-node": "1.2.1",
-    "tslint": "^4.0.2",
-    "typescript": "~2.0.3"
+    "typescript": "~2.3.3"
   }
   
 }
