--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng2-slim-loading-bar": "^4.0.0",
     "ng2-toasty": "^4.0.3",
     "ngx-facebook": "^2.4.0",
     "protractor": "~5.1.2",
